# anycode

./: .gitignore  .gitmodules  BUGS.md  BUILD.md  CMakeLists.txt  README.md  README_zh_cn.md
3party/libptyqt/: CMakeLists.txt  conptyprocess.cpp  shell_process.cpp  shell_process.h  shell_process_p.h  shell_process_unix.cpp  unixptyprocess.cpp  unixptyprocess.h
3party/libvterm/: CMakeLists.txt
3party/quickjs/: CMakeLists.txt  quickjs.c  quickjs.h
App/: AddonLoader.cpp  AddonLoader.h  CMakeLists.txt  addon_loader.cpp  addon_loader.h  app_oss.cpp  app_oss.h  common.h  dockwindow.cpp  dockwindow.h  dockwindow.ui  global.h  ide_application.cpp  ide_application.h  idewindow.cpp  idewindow.h  idewindow.ui  language.zh_CN.qm  language.zh_CN.ts  localdirpanel.cpp  localdirpanel.h  localdirpanel.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  r.qrc  utils.cpp  utils.h
App/Resource/: icons.xrc
App/common/: utils.cpp  utils.h
App/components/: DirComboBox.cpp  DirComboBox.h  DirMappingView.cpp  DirMappingView.h  IconWidget.cpp  IconWidget.h  MessageDialog.cpp  MessageDialog.h  Notification.cpp  Notification.h  NotificationItem.ui  TreeView.cpp  dir_mapping_view.cpp  file_selector.cpp  file_selector.h  grid_view.cpp  grid_view.h  itd_button.cpp  itd_button.h  list_item_delegate.cpp  list_item_delegate.h  message_dialog.cpp  message_dialog.h  password_edit.cpp  password_edit.h  select_model.h  tree_item_delegate.cpp  tree_item_delegate.h  tree_view.cpp  tree_view.h
App/core/: backend_thread.cpp  backend_thread.h  des.cpp  des.h  ide_settings.cpp  ide_settings.h  layout_settings.cpp  layout_settings.h  list_model.cpp  list_model.h  options_setting.cpp  options_setting.h  quick_pane_impl.cpp  quick_pane_impl.h  theme.cpp  theme.h
App/cvs/: Branch.cpp  Commit.cpp  Commit.h  CommitModel.cpp  CommitModel.h  DiffFile.cpp  DiffFileModel.cpp  DiffFileModel.h  Repository.cpp  Repository.h  branch.cpp  branch.h  commit.cpp  commit_model.cpp  commit_model.h  diff_file.cpp  diff_file.h  diff_file_model.cpp  diff_file_model.h  error.cpp  error.h  repository.cpp  repository.h
App/interface/: FormPanel.cpp  FormPanel.h  NewFileDialog.cpp  NewFileDialog.h  NewFileDialog.ui  NotificationImpl.cpp  NotificationImpl.h  Panel.cpp  Panel.h  RemoteFileItemModel.cpp  RemoteFileItemModel.h  code_parse_lint.cpp  code_parse_lint.h  file_item.cpp  file_item.h  form_panel.cpp  form_panel.h  remote_file_item_model.cpp  remote_file_item_model.h  sql_querier.cpp  sql_querier.h
App/local/: FileItem.cpp  FileItem.h  FileItemModel.cpp  FileItemModel.h  file_item.cpp  file_item.h
App/network/: NetworkListen.cpp  NetworkListen.h  NetworkManager.cpp  NetworkManager.h  NetworkRequest.cpp  NetworkRequest.h  NetworkResponse.cpp  NetworkResponse.h  network_listen.cpp  network_listen.h  network_manager.cpp  network_manager.h  network_request.cpp  network_request.h  network_response.cpp  network_response.h
App/panes/: loader.cpp  loader.h  resource_manager_pane.cpp  resource_manager_pane.h  resource_manager_pane.ui
App/project/: ManagerTreeItem.cpp  ManagerTreeItem.h  ManagerTreeModel.cpp  ManagerTreeModel.h  ManagerWindow.cpp  ManagerWindow.h  ManagerWindow.ui  OpenProjectWindow.cpp  OpenProjectWindow.h  OpenProjectWindow.ui  ProjectEditWidget.cpp  ProjectEditWidget.h  ProjectEditWidget.ui  ProjectListModel.cpp  ProjectListModel.h  SiteFrameworkWidget.cpp  SiteFrameworkWidget.h  SiteFrameworkWidget.ui  SiteGroupListModel.cpp  SiteGroupListModel.h  SiteTypeListModel.cpp  SiteTypeListModel.h  SplitterHandleWidget.cpp  SplitterHandleWidget.h  import_site_dialog.cpp  import_site_dialog.h  import_site_dialog.ui  new_project_one_widget.cpp  new_project_one_widget.h  new_project_one_widget.ui  new_project_two_widget.cpp  new_project_two_widget.h  new_project_two_widget.ui  new_project_window.cpp  new_project_window.h  new_project_window.ui  new_project_zero_widget.cpp  new_project_zero_widget.h  new_project_zero_widget.ui  open_project_window.cpp  (+12 more)
App/storage/: AddonStorage.cpp  AddonStorage.h  CommitStorage.cpp  CommitStorage.h  CommonStorage.cpp  CommonStorage.h  DatabaseHelper.cpp  DatabaseHelper.h  FavoriteStorage.cpp  FavoriteStorage.h  GroupStorage.cpp  GroupStorage.h  ProjectStorage.cpp  ProjectStorage.h  SiteSetting.cpp  SiteSetting.h  SiteStorage.cpp  SiteStorage.h  Storage.cpp  addon_storage.cpp  addon_storage.h  commit_storage.cpp  commit_storage.h  common_storage.cpp  common_storage.h  database_helper.cpp  database_helper.h  db_storage.cpp  db_storage.h  favorite_storage.cpp  favorite_storage.h  group_storage.cpp  group_storage.h  project_storage.cpp  project_storage.h  recent_storage.cpp  recent_storage.h  site_setting.cpp  site_storage.cpp  site_storage.h  (+2 more)
App/themes/: dark_theme.cpp  dark_theme.h  light_theme.cpp  light_theme.h
App/transfer/: Task.cpp  Task.h  TaskPoolModel.cpp  TaskPoolModel.h  TaskThread.cpp  TaskThread.h  task.cpp
App/translations/: App_zh_CN.ts
App/ultimate/: ul_pane.h
App/view/: StatusBarView.cpp  StatusBarView.h
App/zip/: ZipArchive.cpp  ZipArchive.h  zip_archive.cpp  zip_archive.h
addon/COS/: CMakeLists.txt  COS.pro  COSFormDirSetting.cpp  COSFormDirSetting.h  COSFormDirSetting.ui  COSFormGeneral.cpp  COSFormGeneral.h  COSFormGeneral.ui  COSListObjectResponse.cpp  COSListObjectResponse.h  COSPanel.cpp  COSPanel.h  COSParse.cpp  COSParse.h  COSResponse.cpp  COSResponse.h  COSSetting.cpp  COSSetting.h  COSWorker.cpp  COSWorker.h  COS_global.h  Export.cpp  Export.h  cos.cpp  cos.h  cos_form_dir_setting.cpp  cos_form_dir_setting.h  cos_form_dir_setting.ui  cos_form_general.cpp  cos_form_general.h  cos_form_general.ui  cos_list_object_response.cpp  cos_list_object_response.h  cos_panel.cpp  cos_panel.h  cos_panel.ui  cos_parse.cpp  cos_parse.h  cos_response.cpp  cos_setting.cpp  (+8 more)
addon/FTP/: CMakeLists.txt  ChmodDialog.cpp  ChmodDialog.ui  Export.cpp  Export.h  FTP.pro  FTPFormDirSetting.cpp  FTPFormDirSetting.h  FTPFormDirSetting.ui  FTPPanel.cpp  (+39 more)
libsvnpp/: CMakeLists.txt  libsvnpp.pro
src/: CMakeLists.txt  anycode.rc  copyright.rc  copyrightd.rc  logo.icns  main.cpp
(+616 files in other folders)
